Fix width of blur gradient behind events search bar

--- a/app/app.css
+++ b/app/app.css
@@ -29,7 +29,9 @@
   h5 {
     font-size: var(--text-lg);
   }
+}
 
+@layer components {
   .input-border:focus-within::before {
     transform: scale(100%);
   }
@@ -58,10 +60,11 @@
   .blur-down::before {
     content: "";
     height: calc(100% + 2.5rem);
-    width: min(calc(100% + 5rem), calc(100vw + 1.25rem));
+    width: max(calc(100vw - 1rem), calc(100% + 2.5rem));
     position: absolute;
     top: -1.25rem;
-    left: -2.5rem;
+    left: 50%;
+    transform: translate(-50%, 0);
     z-index: -1;
     overflow: hidden;
     -webkit-backdrop-filter: blur(15px);
@@ -255,7 +258,7 @@
   --shadow-above: 0 -4px 8px rgba(0, 0, 0, 0.1);
 
   --home-logo-cols: repeat(auto-fit, minmax(225px, 1fr));
-  --event-card-cols: repeat(auto-fit, minmax(250px, 1fr));
+  --event-card-cols: repeat(auto-fit, minmax(280px, 1fr));
 
   --breakpoint-xs: 32rem;
 }
